assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Sacramento&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Montserrat, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

/* flex for index.html and all */

.container {
    display: flex;
    flex-direction: column;
}

.main {
    flex: 0 1 100%;
    background-color: #F2DEA2;
}

/* flex for gallery section */

#flex-gallery {
    display: flex;
    flex-wrap: wrap;
}

#flex-gallery > * {
    flex: 0 1 15%;
    margin-left: auto;
    margin-right: auto;
}

/* headings and logo */

h1, h2 {
    font-family: Sacramento, sans-serif;
    color: #252525;
}

h3 {
    font-family: Montserrat, sans-serif;
    color: #3a3a3a;
}

#logo {
    float: left;
    font-size: 280%;
    margin-left: 30px;
}

/* navigation links, code taken from Code Institute learning materials https://learn.codeinstitute.net/courses/course-v1:CodeInstitute+LR101+2021_T1/courseware/4a07c57382724cfda5834497317f24d5/637be1a2e3b84b25aa33f3ab4d98603c/*/

#menu {
    font-size: 110%;
    display: flex;
    float: right;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #3a3a3a;
}

.active {
    border-bottom: 1px solid #3a3a3a;
}

/* section, titles and text */

.section-title {
    font-family: Montserrat, sans-serif;
    text-align: center;
    font-size: 200%;
    padding: 75px;
    margin: auto;
}

.section {
    height: auto;
    width: 100%;
    padding-bottom: 75px;
    background-color: whitesmoke;
}

#video-section {
    height: auto;
    width: 100%;
    padding-bottom: 75px;
    background-color: white;
}

/* hero image and cover text*/

.cover-text, .cover-text h2 {
    color: #fff;
}

#cover-text-home {
    font-size: 230%;
    font-family: Sacramento, sans-serif;
    width: fit-content;
    height: fit-content;
    padding-left: 30px;
    top: 50%;
    left: 50%;
    position: absolute;
    text-align: center;
    transform: translate(-50%, -50%);
    background-color: RGBA(191,189,184,0.8);
}

#cover-text-order {
    font-size: 230%;
    font-family: Sacramento, sans-serif;
    width: fit-content;
    height: fit-content;
    padding-top: 10px;
    padding-left: 10px;
    top: 50%;
    left: 50%;
    position: absolute;
    text-align: center;
    transform: translate(-50%, -50%);
    background-color: RGBA(191,189,184,0.8);
}

#cover-text-gallery {
    font-size: 230%;
    font-family: Sacramento, sans-serif;
    width: fit-content;
    height: fit-content;
    padding-top: 10px;
    padding-left: 10px;
    top: 50%;
    left: 50%;
    position: absolute;
    text-align: center;
    transform: translate(-50%, -50%);
    background-color: RGBA(191,189,184,0.8);
}

#cover-text-contact {
    font-size: 230%;
    font-family: Sacramento, sans-serif;
    width: fit-content;
    height: fit-content;
    padding-top: 10px;
    padding-left: 10px;
    top: 50%;
    left: 50%;
    position: absolute;
    text-align: center;
    transform: translate(-50%, -50%);
    background-color: RGBA(191,189,184,0.8);
}

.hero-overflow {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

.hero-image {
    height: 600px;
    width: 100%;
    background-image: url(../images/dreamcatcher11.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-image-order {
    height: 600px;
    width: 100%;
    background-image: url(../images/dreamcatcher013.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-image-gallery {
    height: 600px;
    width: 100%;
    background-image: url(../images/dreamcatcher015.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-image-contact {
    height: 600px;
    width: 100%;
    background-image: url(../images/dreamcatcher019.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* what is a dreamcatcher section, code taken from Code Institute learning materials  */

#left-about {
    padding-top: 10px;
    width: 33%;
    height: auto;
    float: left;
}

#right-about {
    padding-top: 10px;
    width: 33%;
    height: auto;
    float: right;
}

#center-about {
    width: 33%;
    margin: 0 auto;
}

.left-about-heading {
    width: 60%;
    float: right;
    line-height: 20px;
    clear: both;
    margin-top: 75px;
    margin-bottom: 20px;
    text-align: right;
}

.left-about-heading h2 {
    font-size: 200%;
    margin-bottom: 20px;
    text-align: right;
}

.right-about-heading {
    width: 60%;
    float: left;
    line-height: 20px;
    clear: both;
    margin-bottom: 20px;
    margin-top: 75px;
}

.right-about-heading h2 {
    font-size: 200%;
    margin-bottom: 20px;
    text-align: left;
}

#central-dreamc img {
    height: 60%;
    width: 60%;
    border: #F2DEA2;
    border-style: solid;
    border-width: 15px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 80px;
}

/* About me and video section */

#video-section {
    width: 100%;
    height: fit-content;
}

#video-section p {
    margin: auto;
    margin-bottom: 40px;
    width: 50%;
    height: 50%;
    text-align: center;
}

#video-section div {
    text-align: center;
    margin-bottom: 40px;
}

#tutorial {
    border: 0;
}

/* flex for sections in home page */

.flex-section {
    display: flex;
}

/* create your order and contact section */

.section h3 {
    margin-bottom: 10px;
    margin-top: 75px;
    color: black;
    font-weight: bold;
}

.section h4 {
    text-align: center;
    font-family: Montserrat, sans-serif;
    background-color: red;
}

.order-form {
    position: relative;
    margin-top: 30px;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
}

.order-form div {
    padding: 15px;
}

.order-form ::placeholder {
    font-family: Montserrat, sans-serif
}

.text-input {
    color: #3a3a3a;
    width: 90%;
    height: 25px;
    margin: 5px 0 20px 0;
    padding: 10px;
    border: 1px solid #3a3a3a;
    border-radius: 10px;
    display: block;
}

.message-box {
    color: #3a3a3a;
    width: 100%;
    margin: 5px 0 20px 0;
    padding: 0;
    border: 1px solid #3a3a3a;
    border-radius: 10px;
    display: block;
}

.radio-input {
    border: 1px solid #3a3a3a;
    margin: 0 30px 20px 0;
}

.section select {
    margin-left: 5px;
    margin-right: 10px;    
    border: solid 1px #3a3a3a;
    border-radius: 10px;
}

.button {
    background-color: #3a3a3a;
    color: #fff;
    border: #fff solid 1px;
    padding: 20px 30px;
    text-align: center;
    position: relative;
    border-radius: 10px;
    margin-top: 60px;
}

.button:hover {
    background-color: #fff;
    color: #3a3a3a;
    border: #3a3a3a solid 1px;
}

.form-button {
    text-align: center;
}

/* flex for order section */
.form-flex {
    display: flex;
    flex-wrap: wrap;
}

#form-flex > * {
    flex: 1 1 100%;
}

#flex-order {

    display: flex;
    flex-direction: column;
}

#flex-order form {
    flex: 0 1 100%;
}

/* gallery page, code from w3schools https://www.w3schools.com/css/css_image_gallery.asp */

div.gallery {
    margin: 5px;
    border: 1px solid #ccc;
    float: left;
    width: 180px;
  }
  
  div.gallery:hover {
    border: 1px solid #777;
  }
  
  div.gallery img {
    width: 100%;
    height: auto;
  }
  
  div.desc {
    padding: 15px;
    text-align: center;
  }

/* footer */

#footer {
    flex: 1;
    background-color: #F2DEA2;
    width: 100%;
    height: 50px;
}

.social-media {
    width: 100%;
    height: auto;
    text-align: center;
    list-style-type: none;
}

.social-media > li {
    display: inline;
}

.social-media i {
    color: #3a3a3a;
    padding: 50px;
    font-size: 200%;
}

@media (max-width: 700px) {
    #menu {
        flex-direction: column;
        font-size: 75%;
        margin: 0;
        padding: 0;
    }

    #logo {
        font-size: 200%;
    }

    .flex-section {
        flex-direction: column;
        text-align: center;
        width: 100%;
    }

    #left-about {
        padding-top: 10px;
        width: 100%;
        text-align: center;
    }
    
    #right-about {
        padding-top: 10px;
        width: 100%;
        text-align: center;
    }
    
    #center-about {
        padding-top: 10px;
        width: 100%;
        text-align: center;
    }
    
    .left-about-heading {
        width: 100%;
        line-height: 20px;
        clear: both;
        margin-top: 75px;
        margin-bottom: 20px;
        text-align: center;
        padding-left: 5px;
        padding-right: 5px;
    }
    
    .left-about-heading h2 {
        font-size: 200%;
        margin-bottom: 20px;
        text-align: center;
    }
    
    .right-about-heading {
        width: 100%;
        line-height: 20px;
        clear: both;
        margin-bottom: 20px;
        margin-top: 75px;
        text-align: center;

    }

    .right-about-heading h2 {
        font-size: 200%;
        margin-bottom: 20px;
        text-align: center;
    }

    #tutorial {
        width: 90%;
    }

    #video-section p {
        width: 80%;
        text-align: center;
    }
}

